--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://44.199.202.192:9000/</sonar.host.url>
 		<sonar.login>37d025ba69f9977f3650845b9e594b919228d92b</sonar.login>
-		,!-- <sonar.password>admin</sonar.password> -->
+		<!-- <sonar.password>admin</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
